test/data/pass/tokenizer/context.js
async function* f(){
   await /a*/;
   //yield /a*/;
}
async();
await();
