test/data/fail/declarations/class.js
class a { get constructor(){} } //<>
class a { set constructor(a){} } //<>
class a { *constructor(){} } //<>
class a { async constructor(){} } //<>
class a { async *constructor(){} } //<>
